@@ -5,6 +5,7 @@
 Added:
   - Configured to use four spaces for indentation.
   - Show column number in the mode line.
+  - Highlight trailing whitespaces in prog-mode and text-mode.
 
 Changed:
   - Frames default width slightly balanced.
